# kharon

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  Makefile  README.md  index.html  mkdocs.yml  mypy.ini  pyproject.toml  sitemap.xml
.github/workflows/: docsci.yml  pythonci.yml  webapp_ci.yml
deploy/: Makefile  README.md
docs/: index.md
kharon/: app.py  auth.py  constants.py  dbutils.py  dependencies.py  iam.py  sshutils.py  typing.py
kharon/models/: __init__.py  clusters.py  jobs.py  model_utils.py  users.py
kharon/routers/: api.py  auth.py  cluster.py
search/: search_index.json
service/: Dockerfile  README.md  docker-compose.yml  main.py  requirements.txt  run.sh
shared_science/: app.py  auth.py  dbutils.py  dependencies.py  iam.py  sshutils.py
shared_science/models/: __init__.py  clusters.py  jobs.py  model_utils.py  users.py
shared_science/routers/: __init__.py  api.py  api_public.py  auth.py  cluster.py
tests/: test_dependencies.py  test_iam.py  test_models.py  test_sshutils.py
webapp/: Dockerfile  README.md  nginx.conf  package-lock.json  package.json
webapp/public/: index.html  manifest.json
webapp/src/: App.js  App.tsx  index.tsx  theme.ts
webapp/src/api/: api.ts
webapp/src/components/: 404.tsx  ClusterCard.tsx  Dashboard.tsx  GenerateAPIKey.tsx  GoogleSignIn.js  GoogleSignIn.tsx  Home.tsx  LoginPage.tsx  ProxyPage.tsx  Settings.tsx
webapp/src/helpers/: AuthContext.tsx
